--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+    <header>
+      <h1>Story of my life</h1>
+    </header>
 
     <script src="js/app.js"></script>
 </body>
