change site heading before creating a new branch

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <h1>The Rise and Rise of Udacity... </h1>
+        <h1>The Rise and Fall of Pablo Escobar... </h1>
     </header>
 
     <div class="container">
